Fixed hover error: When we want to hover over the dropdown items on smaller screens the dropdown kept closing this was because we were setting on mouse enter and leave to true and false when all we needed to do was assign a function that says only only when the hamburger is not true you can hover over the dropdown items.

--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,10 @@ code {
 /* Making header fixed for scrolling*/
 nav.bg-body-tertiary.navbar.navbar-expand-lg.navbar-light {
     height: 55px;
-    position: fixed;
+    /* position: fixed;
     top: 0;
     left: 0;
-    right: 0;
+    right: 0; */
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.025);
     background-color: #f7f7fa;
 }
